syntax = "proto3";

package clustercontroller;

option go_package = "github.com/globulario/services/golang/clustercontroller/clustercontrollerpb;clustercontrollerpb";

import "google/protobuf/timestamp.proto";

message ClusterInfo {
  string cluster_id = 1;
  string cluster_domain = 2;
  google.protobuf.Timestamp created_at = 3;
}

message NodeIdentity {
  string hostname = 1;
  string domain = 2;
  repeated string ips = 3;
  string os = 4;
  string arch = 5;
  string agent_version = 6;
}

message NodeRecord {
  string node_id = 1;
  NodeIdentity identity = 2;
  google.protobuf.Timestamp last_seen = 3;
  string status = 4;
  repeated string profiles = 5;
  map<string,string> metadata = 6;
  string agent_endpoint = 7;
}

message CreateJoinTokenRequest {
  google.protobuf.Timestamp expires_at = 1;
}
message CreateJoinTokenResponse {
  string join_token = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message RequestJoinRequest {
  string join_token = 1;
  NodeIdentity identity = 2;
  map<string,string> labels = 3;
}
message RequestJoinResponse {
  string request_id = 1;
  string status = 2;
  string message = 3;
}

message GetJoinRequestStatusRequest {
  string request_id = 1;
}
message GetJoinRequestStatusResponse {
  string status = 1;
  string node_id = 2;
  repeated string profiles = 3;
  string message = 4;
}

message ListJoinRequestsRequest {}
message ListJoinRequestsResponse {
  repeated NodeRecord pending = 1;
}

message ApproveJoinRequest {
  string node_id = 1;
  repeated string profiles = 2;
  map<string,string> metadata = 3;
}
message ApproveJoinResponse {
  string node_id = 1;
  string message = 2;
}

message RejectJoinRequest {
  string node_id = 1;
  string reason = 2;
}
message RejectJoinResponse {
  string node_id = 1;
  string message = 2;
}

message ListNodesRequest {}
message ListNodesResponse {
  repeated NodeRecord nodes = 1;
}

message SetNodeProfilesRequest {
  string node_id = 1;
  repeated string profiles = 2;
}
message SetNodeProfilesResponse {
  string operation_id = 1;
}

enum ArtifactKind {
  ARTIFACT_KIND_UNSPECIFIED = 0;
  ARTIFACT_SERVICE = 1;
  ARTIFACT_APPLICATION = 2;
  ARTIFACT_SUBSYSTEM = 3;
}

message ArtifactRef {
  ArtifactKind kind = 1;
  string name = 2;
  string publisher = 3;
  string version = 4;
  string discovery_id = 5;
}

message UnitAction {
  string unit_name = 1;
  string action = 2;
}

message NodePlan {
  string node_id = 1;
  repeated string profiles = 2;
  repeated ArtifactRef ensure_installed = 3;
  repeated UnitAction unit_actions = 4;
  map<string,string> rendered_config = 5;
}

message GetNodePlanRequest {
  string node_id = 1;
}
message GetNodePlanResponse {
  NodePlan plan = 1;
}

message StartApplyRequest {
  string node_id = 1;
}
message StartApplyResponse {
  string operation_id = 1;
}

enum OperationPhase {
  OP_PHASE_UNSPECIFIED = 0;
  OP_QUEUED = 1;
  OP_RUNNING = 2;
  OP_SUCCEEDED = 3;
  OP_FAILED = 4;
}

message OperationEvent {
  string operation_id = 1;
  string node_id = 2;
  OperationPhase phase = 3;
  string message = 4;
  int32 percent = 5;
  bool done = 6;
  string error = 7;
  google.protobuf.Timestamp ts = 8;
}

message NodeUnitStatus {
  string name = 1;
  string state = 2;
  string details = 3;
}

message NodeStatus {
  string node_id = 1;
  NodeIdentity identity = 2;
  repeated string ips = 3;
  repeated NodeUnitStatus units = 4;
  string last_error = 5;
  google.protobuf.Timestamp reported_at = 6;
  string agent_endpoint = 7;
}

message ReportNodeStatusRequest {
  NodeStatus status = 1;
}

message ReportNodeStatusResponse {
  string message = 1;
}

message WatchOperationsRequest {
  string node_id = 1;
  string operation_id = 2;
}

service ClusterControllerService {
  rpc GetClusterInfo(google.protobuf.Timestamp) returns (ClusterInfo);

  rpc CreateJoinToken(CreateJoinTokenRequest) returns (CreateJoinTokenResponse);
  rpc RequestJoin(RequestJoinRequest) returns (RequestJoinResponse);
  rpc ListJoinRequests(ListJoinRequestsRequest) returns (ListJoinRequestsResponse);
  rpc ApproveJoin(ApproveJoinRequest) returns (ApproveJoinResponse);
  rpc RejectJoin(RejectJoinRequest) returns (RejectJoinResponse);

  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
  rpc SetNodeProfiles(SetNodeProfilesRequest) returns (SetNodeProfilesResponse);
  rpc GetNodePlan(GetNodePlanRequest) returns (GetNodePlanResponse);
  rpc ReportNodeStatus(ReportNodeStatusRequest) returns (ReportNodeStatusResponse);
  rpc GetJoinRequestStatus(GetJoinRequestStatusRequest) returns (GetJoinRequestStatusResponse);

  rpc WatchOperations(WatchOperationsRequest) returns (stream OperationEvent);
}
